--- a/Project.toml
+++ b/Project.toml
@@ -9,4 +9,6 @@ Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Jutul = "2b460a1a-8a2b-45b2-b125-b5c536396eb9"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MultiComponentFlash = "35e5bd01-9722-4017-9deb-64a5d32478ff"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
