--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,13 @@ Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
+[compat]
+ChainRulesCore = "1"
+Flux = "0.12, 0.13"
+Jutul = "0.1.6"
+JutulDarcy = "0.1.5"
+julia = "1"
+
 [extras]
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
