--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -11,6 +11,7 @@ JutulDarcy = "82210473-ab04-4dce-b31b-11573c4f8e0a"
 JutulDarcyAD = "41f0c4f5-9bdd-4ef1-8c3a-d454dff2d562"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 SlimPlotting = "f6d04670-764e-495b-a720-91c3c9a588ff"
