--- a/Project.toml
+++ b/Project.toml
@@ -17,8 +17,8 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 [compat]
 ChainRulesCore = "1"
 Flux = "0.12, 0.13"
-Jutul = "0.1.6"
-JutulDarcy = "0.1.5"
+Jutul = "0.1.6, 0.2.1"
+JutulDarcy = "0.1.5, 0.2.0"
 julia = "1"
 
 [extras]
