major restructure of the code

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "JutulDarcyAD"
 uuid = "41f0c4f5-9bdd-4ef1-8c3a-d454dff2d562"
 authors = ["Ziyi Yin <ziyi.yin@gatech.edu>"]
-version = "0.1.4"
+version = "0.2.0"
 
 [deps]
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
@@ -17,8 +17,8 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 [compat]
 ChainRulesCore = "1"
 Flux = "0.12, 0.13"
-Jutul = "0.1.6, 0.2.1"
-JutulDarcy = "0.1.5, 0.2.0"
+Jutul = "0.2.1"
+JutulDarcy = "0.2.0"
 julia = "1"
 
 [extras]
