--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 ChainRulesCore = "1"
 Flux = "0.12, 0.13"
 Jutul = "=0.2.2"
-JutulDarcy = "=0.2.1"
+JutulDarcy = "=0.2.1, 0.2"
 Optim = "1"
 julia = "1"
 
